fix(css) update invisible block on little screen

--- a/src/Components/App/ui/App.module.css
+++ b/src/Components/App/ui/App.module.css
@@ -23,3 +23,9 @@
     height: 59px;
   }
 }
+
+@media (max-width: 360px) {
+  .invisibleArea {
+    height: 55px;
+  }
+}
